force-app/main/default/objects/Project__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <label>Actual Cost</label>
    <summarizedField>Project_Task__c.Actual_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>