force-app/main/default/objects/Project__c/fields/Basiline_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Basiline_Finish_Date__c</fullName>
    <label>Basiline Finish Date</label>
    <type>Date</type>
</CustomField>