force-app/main/default/objects/Project__c/fields/Basiline_Start__c.field-meta.xml
<CustomField>
    <fullName>Basiline_Start__c</fullName>
    <label>Basiline Start Date</label>
    <type>Date</type>
</CustomField>