force-app/main/default/objects/Project__c/fields/Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Id__c</fullName>
    <label>Chatter Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>