force-app/main/default/objects/Project__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>IF( AND( Total_Tasks__c  &gt; 0, OR( Duration_Complete_Day_Unit_Tasks__c  &gt; 0,  Duration_Complete_Hour_Unit_Tasks__c  &gt; 0)),

(

IF(

ISNULL( Total_Hours__c ),

((  Duration_Complete_Day_Unit_Tasks__c  + (  Duration_Complete_Hour_Unit_Tasks__c  / 8)) /
(  Total_Duration_in_Days__c  + (  Total_Duration_Hour_Unit_Tasks__c  / 8 ))),


((  Duration_Complete_Day_Unit_Tasks__c  + (  Duration_Complete_Hour_Unit_Tasks__c  /  Total_Hours__c  )) /
(  Total_Duration_in_Days__c  + (  Total_Duration_Hour_Unit_Tasks__c  /  Total_Hours__c  )))

)),

0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>