force-app/main/default/objects/Project__c/fields/Cost_Performance_Index_CPI__c.field-meta.xml
<CustomField>
    <fullName>Cost_Performance_Index_CPI__c</fullName>
    <formula>IF( Actual_Cost__c  = 0, NULL, ( Earned_Value__c  /  Actual_Cost__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Performance Index (CPI)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>