force-app/main/default/objects/Project__c/fields/Cost_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_Variance__c</fullName>
    <formula>Earned_Value__c  -  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>