force-app/main/default/objects/Project__c/fields/Cost_Variance_percent__c.field-meta.xml
<CustomField>
    <fullName>Cost_Variance_percent__c</fullName>
    <formula>IF( Actual_Cost__c  &gt; 0,
( Earned_Value__c  -  Actual_Cost__c ) /  Actual_Cost__c ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Variance%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>