force-app/main/default/objects/Project__c/fields/Days_Overdue_Project__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue_Project__c</fullName>
    <formula>IF(
AND(
TODAY() &gt;  Finish_Date__c ,
 Complete__c  &lt; 1, ISNULL(  Basiline_Finish_Date__c  )),
TODAY() -  Finish_Date__c ,
 Finish_Date__c  -  Basiline_Finish_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue (Project)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>