force-app/main/default/objects/Project__c/fields/Default_User_Project_Settings__c.field-meta.xml
<CustomField>
    <fullName>Default_User_Project_Settings__c</fullName>
    <label>Default User Project Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>