force-app/main/default/objects/Project__c/fields/Duration_Complete_Hour_Unit_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Duration_Complete_Hour_Unit_Tasks__c</fullName>
    <label>Duration Complete - Hour Unit Tasks</label>
    <summarizedField>Project_Task__c.Duration_Complete__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Task__c.Duration_Unit__c</field>
        <operation>equals</operation>
        <value>h</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Time_Tracking_Only__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>