force-app/main/default/objects/Project__c/fields/Earned_Effort__c.field-meta.xml
<CustomField>
    <fullName>Earned_Effort__c</fullName>
    <formula>Total_Planned_Effort__c  *  Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>