force-app/main/default/objects/Project__c/fields/Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value__c</fullName>
    <formula>Budgeted_Cost__c  *  Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>