force-app/main/default/objects/Project__c/fields/is_template__c.field-meta.xml
<CustomField>
    <fullName>is_template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Template</label>
    <type>Checkbox</type>
</CustomField>