force-app/main/default/objects/Project__c/fields/Last_User_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Update__c</fullName>
    <label>Last User Update</label>
    <length>254</length>
    <type>Text</type>
</CustomField>