force-app/main/default/objects/Project__c/fields/Last_User_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Update_Time__c</fullName>
    <label>Last User Update Time</label>
    <type>DateTime</type>
</CustomField>