force-app/main/default/objects/Project__c/fields/Percent_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Percent_Overdue__c</fullName>
    <formula>IF ( Project_Duration__c  &gt; 0,  Days_Overdue_Project__c  /  Project_Duration__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>