force-app/main/default/objects/Project__c/fields/Percent_Slippage__c.field-meta.xml
<CustomField>
    <fullName>Percent_Slippage__c</fullName>
    <formula>(  Actual_Duration__c  -  Baseline_Duration__c  ) /
 Baseline_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Slippage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>