force-app/main/default/objects/Project__c/fields/Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value__c</fullName>
    <label>Planned Value</label>
    <length>254</length>
    <type>Text</type>
</CustomField>