force-app/main/default/objects/Project__c/fields/Start_Variance__c.field-meta.xml
<CustomField>
    <fullName>Start_Variance__c</fullName>
    <formula>Start_Date__c  -  Basiline_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>