force-app/main/default/objects/Project__c/fields/sysBaselineFinishRollup__c.field-meta.xml
<CustomField>
    <fullName>sysBaselineFinishRollup__c</fullName>
    <label>sysBaselineFinishRollup</label>
    <summarizedField>Project_Task__c.BasilineFinish__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>