force-app/main/default/objects/Project__c/fields/sysBaselineStartRollup__c.field-meta.xml
<CustomField>
    <fullName>sysBaselineStartRollup__c</fullName>
    <label>sysBaselineStartRollup</label>
    <summarizedField>Project_Task__c.BasilineStartDate__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>