force-app/main/default/objects/Project__c/fields/SysCalendar__c.field-meta.xml
<CustomField>
    <fullName>SysCalendar__c</fullName>
    <label>SysCalendar</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>