force-app/main/default/objects/Project__c/fields/sysRecalcStartdatr__c.field-meta.xml
<CustomField>
    <fullName>sysRecalcStartdatr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sysRecalcStartdatr</label>
    <type>Checkbox</type>
</CustomField>