force-app/main/default/objects/Project__c/fields/sysTimeZoneId__c.field-meta.xml
<CustomField>
    <fullName>sysTimeZoneId__c</fullName>
    <label>sysTimeZoneId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>