force-app/main/default/objects/Project__c/fields/Taks_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Taks_In_Progress__c</fullName>
    <label>Taks In Progress</label>
    <summaryFilterItems>
        <field>Project_Task__c.Statut__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>