force-app/main/default/objects/Project__c/fields/Tasks_Defered__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Defered__c</fullName>
    <label>Tasks Defered</label>
    <summaryFilterItems>
        <field>Project_Task__c.Statut__c</field>
        <operation>equals</operation>
        <value>Deferred</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>