force-app/main/default/objects/Project__c/fields/Tasks_Waiting_on_someone_else__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Waiting_on_someone_else__c</fullName>
    <label>Tasks Waiting on someone else</label>
    <summaryFilterItems>
        <field>Project_Task__c.Statut__c</field>
        <operation>equals</operation>
        <value>Waiting on someone else</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>