force-app/main/default/objects/Project__c/fields/Tast_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>Tast_Not_Started__c</fullName>
    <label>Tast Not Started</label>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Statut__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>