force-app/main/default/objects/Project__c/fields/Time_zone__c.field-meta.xml
<CustomField>
    <fullName>Time_zone__c</fullName>
    <label>Time zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:45) Chatham Daylight Time (Pacific/Chatham)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Fiji Summer Time (Pacific/Fiji)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Norfolk Island Time (Pacific/Norfolk)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Pacific/Norfolk</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Lord Howe Daylight Time (Australia/Lord_Howe)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30) Australian Central Daylight Time (Australia/Adelaide)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Hong Kong Standard Time (Asia/Hong_Kong)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Philippine Standard Time (Asia/Manila)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Bangladesh Standard Time (Asia/Dhaka)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>