force-app/main/default/objects/Project__c/fields/Total_Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Effort__c</fullName>
    <label>Total Actual Effort</label>
    <summarizedField>Project_Task__c.Actuel_Effort__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>