force-app/main/default/objects/Project__c/fields/Total_Days_Overdue_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Overdue_Tasks__c</fullName>
    <label>Total Days Overdue(Tasks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>