force-app/main/default/objects/Project__c/fields/Total_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_in_Days__c</fullName>
    <label>Total Duration in Days</label>
    <summarizedField>Project_Task__c.sysDurationInDays__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Time_Tracking_Only__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Task__c.Duration_Unit__c</field>
        <operation>notEqual</operation>
        <value>h</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>