force-app/main/default/objects/Project__c/fields/Use_Batch_Create_Process__c.field-meta.xml
<CustomField>
    <fullName>Use_Batch_Create_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Batch Create Process</label>
    <type>Checkbox</type>
</CustomField>