force-app/main/default/objects/Project__c/fields/User_Chatter__c.field-meta.xml
<CustomField>
    <fullName>User_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Chatter Free Group</label>
    <type>Checkbox</type>
</CustomField>