force-app/main/default/objects/Project__c/fields/WeekendAreWorkday__c.field-meta.xml
<CustomField>
    <fullName>WeekendAreWorkday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeekendAreWorkday</label>
    <type>Checkbox</type>
</CustomField>